--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </tr>
         <tr>
             <td>Task 2</td>
-            <td><a href="./id.html">Line 2</a></td>
+            <td><a href="./mobiles.html">Line 2</a></td>
         </tr>
     </table>
 </body>
