--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         </tr>
         <tr>
             <td>Task 1</td>
-            <td><a href="./wedtwo.html">Line 1</a></td>
+            <td><a href="./wedtwo.html">Link 1</a></td>
         </tr>
         <tr>
             <td>Task 2</td>
-            <td><a href="./mobiles.html">Line 2</a></td>
+            <td><a href="./mobiles.html">Link 2</a></td>
         </tr>
     </table>
 </body>
